# reshadeshadermanager

./: .gitignore  CHANGELOG.md  CONTEXT.md  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml
docs/: MANUAL_QA.md
packaging/: README.md
packaging/appimage/: AppRun  build_appimage.sh  io.github.rsm.reshade_shader_manager.desktop  make_icon.py  reshade-shader-manager.desktop  rsm.spec
reshade_shader_manager/: __init__.py  cli.py  main.py
reshade_shader_manager/core/: __init__.py  catalog_ops.py  config.py  d3d8to9.py  error_format.py  exceptions.py  git_sync.py  ini.py  link_farm.py  manifest.py  paths.py  pcgw.py  plugin_addons_catalog.py  plugin_addons_install.py  plugin_addons_parse.py  plugin_addons_user.py  recent_games.py  repos.py  reshade.py  targets.py  ui_state.py
reshade_shader_manager/ui/: __init__.py  add_plugin_addon_dialog.py  add_repo_dialog.py  catalog_column_view.py  catalog_search.py  error_format.py  log_view.py  main_window.py  plugin_addon_dialog.py  shader_dialog.py
tests/: conftest.py  test_backend_flows.py  test_catalog_ops.py  test_catalog_search.py  test_cli.py  test_config.py  test_d3d8to9.py  test_error_format.py  test_file_logging.py  test_git_sync.py  test_ini.py  test_manifest.py  test_paths.py  test_plugin_addons_catalog.py  test_plugin_addons_install.py  test_plugin_addons_parse.py  test_plugin_addons_user.py  test_recent_games.py  test_repos.py  test_reshade_version.py  test_targets.py  test_ui_state.py
tests/fixtures/: pcgw_sample.html
